src/validation/tests/snapshots/rusty__validation__tests__variable_length_array_test__builtins__builtins_called_with_invalid_number_of_params.snap
---
source: src/validation/tests/variable_length_array_test.rs
expression: diagnostics
---
error[E032]: this POU takes 2 arguments but 0 arguments were supplied
   ┌─ <internal>:13:13
   │
13 │             LOWER_BOUND();
   │             ^^^^^^^^^^^ this POU takes 2 arguments but 0 arguments were supplied

error[E032]: this POU takes 2 arguments but 1 argument was supplied
   ┌─ <internal>:14:13
   │
14 │             LOWER_BOUND(vla);
   │             ^^^^^^^^^^^ this POU takes 2 arguments but 1 argument was supplied

error[E032]: this POU takes 2 arguments but 1 argument was supplied
   ┌─ <internal>:15:13
   │
15 │             LOWER_BOUND(1);
   │             ^^^^^^^^^^^ this POU takes 2 arguments but 1 argument was supplied

error[E031]: Expected a reference for parameter arr because their type is InOut
   ┌─ <internal>:15:25
   │
15 │             LOWER_BOUND(1);
   │                         ^ Expected a reference for parameter arr because their type is InOut

error[E037]: Invalid assignment: cannot assign 'DINT' to 'VARIABLE LENGTH ARRAY'
   ┌─ <internal>:15:25
   │
15 │             LOWER_BOUND(1);
   │                         ^ Invalid assignment: cannot assign 'DINT' to 'VARIABLE LENGTH ARRAY'

error[E032]: this POU takes 2 arguments but 4 arguments were supplied
   ┌─ <internal>:16:13
   │
16 │             LOWER_BOUND(vla, 1, 2, 3);
   │             ^^^^^^^^^^^ this POU takes 2 arguments but 4 arguments were supplied

error[E032]: this POU takes 2 arguments but 0 arguments were supplied
   ┌─ <internal>:18:13
   │
18 │             UPPER_BOUND();
   │             ^^^^^^^^^^^ this POU takes 2 arguments but 0 arguments were supplied

error[E032]: this POU takes 2 arguments but 1 argument was supplied
   ┌─ <internal>:19:13
   │
19 │             UPPER_BOUND(vla);
   │             ^^^^^^^^^^^ this POU takes 2 arguments but 1 argument was supplied

error[E032]: this POU takes 2 arguments but 1 argument was supplied
   ┌─ <internal>:20:13
   │
20 │             UPPER_BOUND(1);
   │             ^^^^^^^^^^^ this POU takes 2 arguments but 1 argument was supplied

error[E031]: Expected a reference for parameter arr because their type is InOut
   ┌─ <internal>:20:25
   │
20 │             UPPER_BOUND(1);
   │                         ^ Expected a reference for parameter arr because their type is InOut

error[E037]: Invalid assignment: cannot assign 'DINT' to 'VARIABLE LENGTH ARRAY'
   ┌─ <internal>:20:25
   │
20 │             UPPER_BOUND(1);
   │                         ^ Invalid assignment: cannot assign 'DINT' to 'VARIABLE LENGTH ARRAY'

error[E032]: this POU takes 2 arguments but 4 arguments were supplied
   ┌─ <internal>:21:13
   │
21 │             UPPER_BOUND(vla, 1, 2, 3);
   │             ^^^^^^^^^^^ this POU takes 2 arguments but 4 arguments were supplied
